# HomoeoGWAS

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile.gpu  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
configs/panels/: rapeseed_horvath2020.yaml  strawberry_pincot2018.yaml
configs/runs/: fit_cotton_hebau_lint_percentage_BLUE_loco.yaml  fit_horvath2020_bloom_50pct_loco.yaml  fit_oat_old_BIO6_loco_logical_pcadj.yaml  fit_rice_Grain_width_loco.yaml  fit_rice_Plant_height_loco.yaml  fit_strawberry_pincot2018_mean_score_loco.yaml  fit_wheat_watkins_days_to_emerg_loco.yaml
configs/species/: arachis_hypogaea.yaml  avena_sativa.yaml  avena_sativa_logical.yaml  brassica_napus.yaml  fragaria_ananassa.yaml  gossypium_hirsutum.yaml  oryza_sativa.yaml  wheat_aestivum.yaml
docs/: 00_charter.md  02_data_inventory.md  03_architecture.md  04_method.md  06_handoff_state.md  algorithm.md  api.md  getting_started.md  index.md  interact_inputs.md  io.md
docs/examples/: jerusalem_artichoke_hexaploid.md  strawberry_octoploid.md
examples/minimal/: README.md  make_demo_data.py
notebooks/: benchmark_figures.py
recipe/: README.md  meta.yaml
reproducibility/: Snakefile
scripts/baseline/: _wait_then_smoketest.sh
scripts/download/: _models_grab.sh  _wheat_grab.sh  local_fetch.sh  phase3_rapeseed.sh  phase4_strawberry.md  wheat_urls_ftp.txt
scripts/phase2/: run_m2_2_horvath_kernel.py  run_m2_3_horvath_reml.py  run_m2_4_1_horvath_multi_reml.py  run_m2_4_2_horvath_diagnostics.py  run_m2_4_3_horvath_calibration.py  run_m2_4_4_horvath_hadamard.py  run_m2_4_5_wheat_pilot.py  run_m2_5_horvath_scan.py  run_m2_5_v2_wheat_scan.py  run_m2_6_horvath_sim_benchmark.py
scripts/phase3/: m3_3_fuse_and_evaluate.py  m3_3_prepare_candidates.py  m3_3_score_dl_prior.py  m3_3_v2_prepare_candidates.py  m3_4_make_cotton_blue_pheno.py  m3_4_v2_cotton_qtl_liftover.py  m3_4_v2_cotton_snpid_fix.py  m3_4_v3_rcfix_rerun.sh  m3_4_validate_chrom_map.py  run_m3_1_v2_wheat_loco_scan.py  run_m3_2_species_qtl.py  run_m3_2_v2_wheat_qtl_ld.py  run_m3_2_wheat_qtl.py
scripts/phase4/: khom_tier1_H_simulation.py
scripts/phase5c/: aggregate_table1.py  run_gblup_panel.py  run_gblup_smoke_strawberry.py
scripts/phase5d/: _rename_chrs_oat.tsv  fill_chrom_map_ensembl.py  prepare_oat_pheno_known_qtl.py  (+3 more)
tests/: conftest.py  test_calibration.py  test_cli.py  test_design_depth.py  test_gp.py  test_grm.py  test_interact.py  test_j3_hardening.py  test_kernel.py  test_kernel_fallback.py  test_khom_tier1.py  test_lmm.py  test_lmm_diagnostics.py  test_lmm_multi.py  test_loco.py  test_plots.py  test_prep.py  test_rplot.py  test_scan.py  test_sim.py  test_species_config.py  test_species_split.py  test_workflow.py
(+229 files in other folders)
